--- a/Ramana.css
+++ b/Ramana.css
@@ -3,8 +3,7 @@ body{
   }
 .header{
   margin:10px;
-  background-color:yellow;
-  opacity:0.4;
+  background-color:#CCCC00;
   height:40px;
   text-align:center;
   line-height:40px;
