--- a/Ramana.css
+++ b/Ramana.css
@@ -1,4 +1,47 @@
 body{
+  background-color:yellow;
+}
+.header{
+  background-color:#cccc00;
+  height:100px;
+  margin:10px;
+  color:white;
+  line-height:100px; 
+  text-align:center;
+}
+#t{
+  display:block;
+  float:left;
+}
+ ul{
+  list-style:none;
+  color:red;
+  margin:10px;
+  border-top:dashed black;
+}
+ul li{
+  float:left;
+  display:block;
+  width:100px;
+  font-size:180%;
+  text-align:center;
+  margin-left:90px;
+  background-color:#cccc00;
+}
+ul li:hover{
+  background-color:#ADFF2F;
+  color:black;
+}
+#i{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+div p{
+  font-size:400%;
+  margin:10px;
+  text-shadow:2px 2px 1px red;
+}
 
 
 
