--- a/Ramana.css
+++ b/Ramana.css
@@ -47,6 +47,17 @@ div p{
   margin:10px;
   text-shadow:2px 2px 1px red;
 }
+#icon{
+  width:50px;
+  height:50px;
+  display:inline;
+  margin-left:auto;
+  margin-right:auto;
+  margin:20px;
+}
+#v{
+  text-align:center;
+}
 
 
 
