--- a/moni.css
+++ b/moni.css
@@ -3,7 +3,7 @@ body{
   background-color:#e56b1f;
 }
 .header{
-  background-color:#cccc00;
+  background-color:#fcc133;
   height:100px;
   margin:10px;
   color:white;
