--- a/moni.css
+++ b/moni.css
@@ -47,7 +47,7 @@ ul li:hover{
 div p{
   font-size:400%;
   margin:10px;
-  text-shadow:2px 2px 1px black;
+  text-shadow:2px 2px 1px white;
 }
 #icon{
   width:50px;
