--- a/mimg.css
+++ b/mimg.css
@@ -1,10 +1,10 @@
 body{
-  background-color:#cd295a;
+  background-color:#f4abaa;
   border-color:black;
   margin:10px;
 }
 #head{
-  background-color:#38adae;
+  background-color:#28559a;
   margin:10px;
   height:100px;
   border-radius:10px;
