--- a/naveen.css
+++ b/naveen.css
@@ -87,3 +87,28 @@ body{
   background-size:110%;
   background-position:center;
 }
+.container4{
+  background-color:orange;
+  height:500px;
+  width:48%;
+  margin-left:2px;
+  margin-top:10px;
+  margin:right:10px;
+  float:right;
+  display:flex;
+}
+.image4{
+  background-image:url('IMG20190902065330.jpg');
+  background-size:100%;
+  width:400px;
+  height:400px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:49px;
+  transition:1s;
+  border-radius:25%;
+}
+.image4:hover{
+  background-size:120%;
+  background-position:center;
+}
