--- a/naveen.css
+++ b/naveen.css
@@ -98,7 +98,7 @@ body{
   display:flex;
 }
 .image4{
-  background-image:url('IMG20190902065330.jpg');
+  background-image:url('IMG-20191220-WA0021.jpg');
   background-size:100%;
   width:400px;
   height:400px;
