--- a/naveen.css
+++ b/naveen.css
@@ -122,7 +122,7 @@ body{
   float:left;
 }
 .image5{
-  background-image:url('IMG_20200426_154706.jpg');
+  background-image:url('IMG-20191220-WA0026.jpg');
   background-size:100%;
   width:400px;
   height:400px;
