--- a/naveen.css
+++ b/naveen.css
@@ -136,3 +136,28 @@ body{
   background-size:120%;
   background-position:center;
 }
+.container6{
+  background-color:orange;
+  height:500px;
+  width:48%;
+  margin-left:2px;
+  margin-top:10px;
+  margin:right:10px;
+  float:right;
+  display:flex;
+}
+.image6{
+  background-image:url('IMG-20191220-WA0021.jpg');
+  background-size:100%;
+  width:400px;
+  height:400px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:49px;
+  transition:1s;
+  border-radius:25%;
+}
+.image6:hover{
+  background-size:120%;
+  background-position:center;
+}
