--- a/naveen.css
+++ b/naveen.css
@@ -147,7 +147,7 @@ body{
   display:flex;
 }
 .image6{
-  background-image:url('IMG-20191220-WA0021.jpg');
+  background-image:url('IMG20190830093640.jpg');
   background-size:100%;
   width:400px;
   height:400px;
