--- a/Karthik.css
+++ b/Karthik.css
@@ -24,7 +24,7 @@ body{
   float:left;
 }
 .image1{
-  background-image:url('IMG_20200426_154706.jpg');
+  background-image:url('IMG20191220195007.jpg');
   background-size:100%;
   width:400px;
   height:400px;
