--- a/Karthik.css
+++ b/Karthik.css
@@ -49,7 +49,7 @@ body{
   display:flex;
 }
 .image2{
-  background-image:url('IMG20190902065330.jpg');
+  background-image:url('IMG_20200430_132813.jpg');
   background-size:100%;
   width:400px;
   height:400px;
