--- a/Karthik.css
+++ b/Karthik.css
@@ -73,7 +73,8 @@ body{
   display:flex;
 }
 .image3{
-  background-image:url('naveen1.jpg');
+  background-image:url('IMG20191220195005.jpg');
+
   background-size:100%;
   width:400px;
   height:400px;
