--- a/Karthik.css
+++ b/Karthik.css
@@ -73,7 +73,7 @@ body{
   display:flex;
 }
 .image3{
-  background-image:url('IMG20191220195005.jpg');
+  background-image:url('IMG_20200426_154500.jpg');
 
   background-size:100%;
   width:400px;
