--- a/Karthik.css
+++ b/Karthik.css
@@ -123,7 +123,7 @@ body{
   float:left;
 }
 .image5{
-  background-image:url('IMG-20191220-WA0026.jpg');
+  background-image:url('pubg1.jpeg');
   background-size:100%;
   width:400px;
   height:400px;
