--- a/naveen.css
+++ b/naveen.css
@@ -98,7 +98,7 @@ body{
   display:flex;
 }
 .image4{
-  background-image:url('IMG-20191220-WA0021.jpg');
+  background-image:url('naveen2.jpg');
   background-size:100%;
   width:400px;
   height:400px;
@@ -122,7 +122,7 @@ body{
   float:left;
 }
 .image5{
-  background-image:url('IMG-20191220-WA0026.jpg');
+  background-image:url('naveen3.jpg');
   background-size:100%;
   width:400px;
   height:400px;
@@ -147,7 +147,7 @@ body{
   display:flex;
 }
 .image6{
-  background-image:url('IMG20190830093640.jpg');
+  background-image:url('naveen4.jpg');
   background-size:100%;
   width:400px;
   height:400px;
